[package]
name = "tops"
description = "Topological File System"
version = "0.1.0"
edition = "2021"
authors = ["Jack Maloney <git@jmmaloney4.xyz>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
cid = "^0.7.0"
ipfs-api-backend-hyper = { path = "../rust-ipfs-api/ipfs-api-backend-hyper", features = ["with-hyper-rustls"]}
ipfs-api-prelude = { path = "../rust-ipfs-api/ipfs-api-prelude", features = ["with-builder"] }
tokio =  { version = "1", features = ["full"] }
libipld = "0.12.0"
serde = "1.0.130"
anyhow = "1.0.13"