[package]
name = "tops"
description = "Topological File System"
version = "0.0.1"
edition = "2021"
authors = ["Jack Maloney <git@jmmaloney4.xyz>"]
license = "MPL-2.0"


[dependencies]
clap = "^2.33"
cid = "^0.7.0"
ipfs-api-backend-hyper = { path = "../rust-ipfs-api/ipfs-api-backend-hyper", features = ["with-hyper-rustls"]}
ipfs-api-prelude = { path = "../rust-ipfs-api/ipfs-api-prelude", features = ["with-builder"] }
tokio =  { version = "1", features = ["full"] }
libipld = { path = "../libipld/" }
serde = "1.0.130"
anyhow = "1.0.13"
hyper = { version = "0.14", features = ["http1", "http2", "client", "tcp"] }
futures = "0.3"
multibase = "0.9"
murmur3 = "0.5.1"
bitvec = "0.22.3"
deku = "0.12"
bytes = "1.1.0"
serde_cbor = "0.11.2"
serde-transcode = "1.1.1"
serde_json = "1.0.70"
fill = { path = "../fill" }
itertools = "0.10.1"
thiserror = "1.0.30"
